--- a/nanumbarungothicsubset.css
+++ b/nanumbarungothicsubset.css
@@ -3,6 +3,7 @@
  font-weight: 400;
  src: url(NanumBarunGothicSubset.eot);
  src: url(NanumBarunGothicSubset.eot?#iefix) format('embedded-opentype'),
+      url(NanumBarunGothicSubset.woff2) format('woff2'),
       url(NanumBarunGothicSubset.woff) format('woff'),
       url(NanumBarunGothicSubset.ttf) format('truetype');
 }
@@ -11,6 +12,7 @@
  font-weight: 700;
  src: url(NanumBarunGothicBoldSubset.eot);
  src: url(NanumBarunGothicBoldSubset.eot?#iefix) format('embedded-opentype'),
+      url(NanumBarunGothicBoldSubset.woff2) format('woff2'),
       url(NanumBarunGothicBoldSubset.woff) format('woff'),
       url(NanumBarunGothicBoldSubset.ttf) format('truetype');
 }
@@ -19,6 +21,7 @@
  font-weight: 300;
  src: url(NanumBarunGothicLightSubset.eot);
  src: url(NanumBarunGothicLightSubset.eot?#iefix) format('embedded-opentype'),
+      url(NanumBarunGothicLightSubset.woff2) format('woff2'),
       url(NanumBarunGothicLightSubset.woff) format('woff'),
       url(NanumBarunGothicLightSubset.ttf) format('truetype');
 }
@@ -27,6 +30,7 @@
  font-weight: 200;
  src: url(NanumBarunGothicUltraLightSubset.eot);
  src: url(NanumBarunGothicUltraLightSubset.eot?#iefix) format('embedded-opentype'),
+      url(NanumBarunGothicUltraLightSubset.woff2) format('woff2'),
       url(NanumBarunGothicUltraLightSubset.woff) format('woff'),
       url(NanumBarunGothicUltraLightSubset.ttf) format('truetype');
 }
