remove eot + add symbols ] { }

--- a/nanumbarungothicsubset.css
+++ b/nanumbarungothicsubset.css
@@ -1,8 +1,7 @@
 @font-face {
  font-family: 'NanumBarunGothic';
  font-weight: 400;
- src: url(NanumBarunGothicSubset.eot);
- src: url(NanumBarunGothicSubset.eot?#iefix) format('embedded-opentype'),
+ src: local("나눔바른고딕"),
       url(NanumBarunGothicSubset.woff2) format('woff2'),
       url(NanumBarunGothicSubset.woff) format('woff'),
       url(NanumBarunGothicSubset.ttf) format('truetype');
@@ -10,8 +9,7 @@
 @font-face {
  font-family: 'NanumBarunGothic';
  font-weight: 700;
- src: url(NanumBarunGothicBoldSubset.eot);
- src: url(NanumBarunGothicBoldSubset.eot?#iefix) format('embedded-opentype'),
+ src: local("나눔바른고딕 Bold"),
       url(NanumBarunGothicBoldSubset.woff2) format('woff2'),
       url(NanumBarunGothicBoldSubset.woff) format('woff'),
       url(NanumBarunGothicBoldSubset.ttf) format('truetype');
@@ -19,8 +17,7 @@
 @font-face {
  font-family: 'NanumBarunGothic';
  font-weight: 300;
- src: url(NanumBarunGothicLightSubset.eot);
- src: url(NanumBarunGothicLightSubset.eot?#iefix) format('embedded-opentype'),
+ src: local("나눔바른고딕 Light"),
       url(NanumBarunGothicLightSubset.woff2) format('woff2'),
       url(NanumBarunGothicLightSubset.woff) format('woff'),
       url(NanumBarunGothicLightSubset.ttf) format('truetype');
@@ -28,8 +25,7 @@
 @font-face {
  font-family: 'NanumBarunGothic';
  font-weight: 200;
- src: url(NanumBarunGothicUltraLightSubset.eot);
- src: url(NanumBarunGothicUltraLightSubset.eot?#iefix) format('embedded-opentype'),
+ src: local("나눔바른고딕 UltraLight"),
       url(NanumBarunGothicUltraLightSubset.woff2) format('woff2'),
       url(NanumBarunGothicUltraLightSubset.woff) format('woff'),
       url(NanumBarunGothicUltraLightSubset.ttf) format('truetype');
